@@ -4,5 +4,5 @@
     <%= link_to url_for("blog_feeds") => begin %><img src="/rss.png" /><% end %>
     <%= link_to "https://github.com/battlemidget/App-skryf" => begin %>Skryf :: v<%= config->{version} %><% end %>
     <%= link_to url_for("login") => begin %>&Pi;<% end %>
-  %= end
+ %= end
 %= end
