@@ -1,0 +1,19 @@
+% layout 'auth';
+
+%= t 'div', class => 'wiki-body' => begin
+  %= include 'admin/nav'
+  %= t 'h2' => 'Update: '. $page->{topic}
+    % if (my $msg = flash 'message') {
+    <b><%= $msg %></b>
+    % }
+  %= form_for url_for("admin_wiki_update"), class => 'blog-form' => ( method => 'post' ) => begin
+  %= hidden_field slug => $page->{slug}
+  %= text_field 'topic', type => 'text', class => 'blog-form-control', value => $page->{topic}
+  %= t 'br'
+  %= text_area "content",  class => "blog-form-control blog-form-control-textarea" => begin
+  <%== $page->{content} %>
+  %= end
+  %= t 'br'
+  %= submit_button 'Update', class => 'btn'
+  %= end
+%= end
