@@ -1,6 +1,8 @@
 Revision history for App-skryf
 
 {{$NEXT}}
+    - Extend wiki admin
+    - Update style template
 
 0.011  2013-08-09 23:56:38 EDT
     - Add wiki plugin
